# Robustness_Meets_Uncertainty.EV-AT

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval_base.yaml  eval_emff.yaml  eval_evidential.yaml  train_config_at.yaml  train_config_at_awp.yaml  train_config_at_awp_l2.yaml  train_config_at_l2.yaml  train_config_emff.yaml  train_config_emff_l2.yaml  train_config_evat.yaml  train_config_evat_l2.yaml  train_config_ikl.yaml  train_config_ikl_l2.yaml  train_config_trades.yaml  train_config_trades_awp.yaml  train_config_trades_awp_l2.yaml  train_config_trades_l2.yaml
configs/attacks/: autoattack.yaml  autoattack_l2.yaml  pgd_05_100_l2.yaml  pgd_05_10_l2.yaml  pgd_05_20_l2.yaml  pgd_1_10.yaml  pgd_1_100.yaml  pgd_1_20.yaml  pgd_2_10.yaml  pgd_2_100.yaml  pgd_2_20.yaml  pgd_4_10.yaml  pgd_4_100.yaml  pgd_4_20.yaml  pgd_6_10.yaml  pgd_6_100.yaml  pgd_6_20.yaml  pgd_8_10.yaml  pgd_8_100.yaml  pgd_8_20.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml
configs/loss/: cross_entropy.yaml  expected_nll_loss.yaml  expected_squared_loss.yaml  type2_nll_loss.yaml
configs/model/: preactresnet18.yaml  wideresnet_34_10.yaml  wideresnet_34_10_emff.yaml
configs/optimizer/: adam.yaml  sgd_ikl.yaml  sgd_rice.yaml  sgd_trades.yaml
configs/proxy/: preactresnet18_proxy.yaml  wideresnet_34_10_proxy.yaml
configs/proxy_optimizer/: sgd_proxy.yaml  sgd_proxy_awp.yaml
configs/scheduler/: cosine_lr.yaml  multistep_lr_extended.yaml
configs/trainer/: standard.yaml
configs/trainer/logger/: csv.yaml  tensorboard.yaml
configs/uncertainty_score/: aleatoric.yaml  entropy.yaml  epistemic.yaml  total_uncertainty.yaml
jobs/: generate_benchmark_jobs.sh  run_single_job.sh  run_single_l2_job.sh
src/: eval.py  export_results.py  train.py
src/ev_at/: __init__.py
src/ev_at/attacks/: __init__.py  aa.py  base.py  pgd.py  utils.py
src/ev_at/core/: constants.py  environment.py  logging.py
src/ev_at/data/: aug.py  dataset.py  loader.py  transforms.py
src/ev_at/metrics/: __init__.py  entropy.py  evidential.py  sc_metrics.py
src/ev_at/modules/: __init__.py  base.py  emff.py  evidential.py
src/ev_at/nn/: __init__.py  activation.py  functional.py  preactresnet.py  (+3 more)
(+20 files in other folders)
