[project]
name = "ev_at"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch-uncertainty",
    "datasets",
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "numpy==1.26.3",
    "pillow==10.2.0",
    "fsspec==2024.2.0",
    "sympy==1.12",
    "rich",
    "tqdm==4.65.0",
    "hypothesis==6.98.10",
    "ipython==8.20.0",
    "pyyaml==6.0.1",
    "typing-extensions==4.9.0",
    "ruff>=0.12.3",
    "lightning>=2.5.2",
    "torchmetrics>=1.7.4",
    "pydantic>=2.7.4",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "matplotlib>=3.10.3",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pandas-stubs>=2.3.0.250703",
    "hydra-core>=1.3.2",
    "tensorboard>=2.20.0",
    "scikit-image",
    "autoattack @ git+https://github.com/fra31/auto-attack@master"
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = [
    "https://pypi.org/simple",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docker",
    "data",
    "src/ev_at/nn/wideresnet_emff.py",
    "src/ev_at/nn/wideresnet.py",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable additional rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
